Update templates and styles

--- a/school_app/templates/index.html
+++ b/school_app/templates/index.html
@@ -1,5 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
+ <!-- ======= Hero Section ======= -->
+ <section id="hero">
+    <div class="hero-container">
+      <h1>Kiproroget High School</h1>
+      <h2>Exellence Our Choice</h2>
+      <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
+    </div>
+  </section><!-- End Hero -->
 
 
 {% endblock %}
