--- a/school_app/templates/base.html
+++ b/school_app/templates/base.html
@@ -6,9 +6,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>School Web Application</title>
-    <meta name="description" content="This is a web application for selling fashion products online">
-    <meta name="keywords" content="School, students, notice board results">
+    <title>Kiproroget High School</title>
+    <meta name="description" content="This is a web application for Kiproroget Secondary School">
+    <meta name="keywords" content="Secondary School, Kiproroget, High School">
     <meta name="robots" content="index, follow">
     <meta name="language" content="EN">
 
@@ -23,9 +23,17 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
 
     <!-- Vendor CSS Files -->
-
+    <link href="{% static 'assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/vendor/icofont/icofont.min.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/vendor/ionicons/css/ionicons.min.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/vendor/animate.css/animate.min.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/vendor/venobox/venobox.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/vendor/owl.carousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/vendor/aos/aos.css' %}" rel="stylesheet">
 
     <!-- Template Main CSS File -->
+    <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
 
     {% block styles %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
@@ -42,16 +50,26 @@
     
         <!-- Footer-->
         <footer class="bg-light py-5 footer">
-            <div class="text-center" style="color: #198754;">Copyright &copy; 2021 - Sample School Web</div>
+            <div class="text-center" style="color: #F0BF56;">Copyright &copy; 2021 - Kiproroget High School</div>
         </footer>
-        <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+        <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
         <!-- preloader -->
         <div id="preloader"></div>
       
         <!-- Vendor JS Files -->
-
+        <script src="{% static 'assets/vendor/jquery/jquery.min.js' %}"></script>
+        <script src="{% static 'assets/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+        <script src="{% static 'assets/vendor/jquery.easing/jquery.easing.min.js' %}"></script>
+        <script src="{% static 'assets/vendor/php-email-form/validate.js' %}"></script>
+        <script src="{% static 'assets/vendor/waypoints/jquery.waypoints.min.js' %}"></script>
+        <script src="{% static 'assets/vendor/counterup/counterup.min.js' %}"></script>
+        <script src="{% static 'assets/vendor/isotope-layout/isotope.pkgd.min.js' %}"></script>
+        <script src="{% static 'assets/vendor/venobox/venobox.min.js' %}"></script>
+        <script src="{% static 'assets/vendor/owl.carousel/owl.carousel.min.js' %}"></script>
+        <script src="{% static 'assets/vendor/aos/aos.js' %}"></script>
       
         <!-- Template Main JS File -->
+        <script src="{% static 'assets/js/main.js' %}"></script>
         <script>
 
             $(document).ready(function(){
