--- a/school_app/templates/registration/signup.html
+++ b/school_app/templates/registration/signup.html
@@ -12,7 +12,7 @@
                 {% endif %}
                 <div class="card">
                     <div class="card-header">
-                        <h3>Customer Registration</h3>
+                        <h3>Sign Up</h3>
                     </div>
                     <div class="card-body">
                         <form action="" method="post">
