Add exam results model

--- a/school_app/static/css/styles.css
+++ b/school_app/static/css/styles.css
@@ -4,3 +4,10 @@
 .lower {
     text-transform: capitalize;
 }
+section {
+    margin-top: 14vh;
+}
+header {
+    background-color: #030306 !important;
+    height: 14vh !important;
+}
