--- a/school_app/templates/contact.html
+++ b/school_app/templates/contact.html
@@ -3,38 +3,39 @@
 {% block content %}
 <!-- Contact-->
 <section class="page-section" id="contact">
-
-    <div class="row">
-        <div class="col-md-3"></div>
-        <div class="col-md-6">
-            {% if messages %}
-            {% for message in messages %}
-            <div class="row ">
-                <div class="col-md-4"></div>
-                <div class="col-md-4">
-                    <div class="alert text-center {{ message.tags }} alert-dismissible" role="alert" id="messages">
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                        {{ message }}
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                {% if messages %}
+                {% for message in messages %}
+                <div class="row ">
+                    <div class="col-md-4"></div>
+                    <div class="col-md-4">
+                        <div class="alert text-center {{ message.tags }} alert-dismissible" role="alert" id="messages">
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                            {{ message }}
+                        </div>
                     </div>
+                    <div class="col-md-4"></div>
                 </div>
-                <div class="col-md-4"></div>
-            </div>
-            {% endfor %}
-            {% endif %}
-            <h2>Leave a message for us</h2>
-            <div class="">
+                {% endfor %}
+                {% endif %}
+                <h2>Leave a message for us</h2>
+                <div class="">
 
 
-                <form class="forms" action="" id="contactForm" method="POST">
-                    {% csrf_token %}
-                    {% bootstrap_form contact_form %}
-                    <input type="submit" class="btn btn-primary" value="Send">
-                </form>
+                    <form class="forms" action="" id="contactForm" method="POST">
+                        {% csrf_token %}
+                        {% bootstrap_form contact_form %}
+                        <input type="submit" class="btn btn-primary" value="Send">
+                    </form>
+                </div>
             </div>
+            <div class="col-md-3"></div>
         </div>
-        <div class="col-md-3"></div>
     </div>
 </section>
 
