--- a/school_app/templates/index.html
+++ b/school_app/templates/index.html
@@ -12,12 +12,13 @@
     <div class="row">
       <div class="col-md-2"></div>
       <div class="col-md-8">
+        <h2 class="text-center">Recent News Feed</h2>
         <div class="row">
           {% for post in posts %}
           <div class="col-md-6">
-            <h3>{{post.title}}</h3>
-            <p>{{post.description}}</p>
-            <img src="{{post.image.url}}" alt="post image">
+            <h4>{{post.title}}</h4>
+            <p>{{post.post}}</p>
+            <img src="{{post.image.url}}" width="100%" alt="post image">
             <small>Date posted: {{post.date_posted|date}}</small>
           </div>
           {% endfor %}
